# dakwah-lens

./: .env.example  .env.production.example  .gitignore  AGENTS.md  LICENSE.md  README.md  docker-compose.prod.yml  docker-compose.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260517_0945_baseline_auth_and_orgs.py  20260517_1001_uuid_server_defaults.py  20260517_1051_briefs_table.py  20260517_2036_social_posts_table.py  20260517_2116_topics_table_social_posts_topic_id.py  20260517_2139_admin_observability_tables.py  20260518_0146_user_profile_onboarded_at.py  20260518_0219_rss_feeds_social_posts_scope_region.py  20260518_0233_rss_feeds_fetch_body.py  20260518_0239_rss_feeds_fetch_body_default_true_.py  20260518_0316_app_settings_seed_usd_to_idr.py  20260518_0406_donations_table.py  20260518_0416_contact_messages_table.py  20260518_0732_ingest_queries_table.py  20260519_0900_terms_followups_notices_tables.py  20260519_1400_brief_errors_table.py  20260519_1700_attachments_on_costs_and_donations.py  20260519_1830_covers_provider_on_manual_costs.py  20260519_2000_admin_logs_table.py  20260519_2100_user_status_role_defaults.py  20260520_1500_page_views_region.py  20260520_1700_insights_summaries.py  20260520_1900_bookmarks.py  20260520_2100_email_digest_opt_in.py  20260520_2300_youtube_channels.py  20260520_2330_insights_summary_segment_daleel.py  20260521_1400_insights_summary_md_en.py  20260521_1500_dawah_opportunity.py  20260523_1100_flyer_assets.py  20260523_1230_briefs_cost_columns.py  20260523_1400_social_posts_engagement.py  20260523_1500_youtube_channels_verified.py  20260523_1900_flyer_photo_bulk_seed.py  20260523_2030_drop_flagged_photos.py  20260523_2230_flyer_cosmos_photos.py  20260523_2330_adhkar_refs_col.py  20260524_0030_drop_second_batch_flagged_photos.py  20260524_0100_mahasiswa_comments.py  20260524_0200_room_admin_controls.py  20260524_0300_visitor_token_and_subscribers.py  (+13 more)
api/docs/: fiqh-compose-notes.md  fiqh-verify-notes.md  tafsir-compose-notes.md  tafsir-verify-notes.md
api/src/api/: __init__.py  cli.py  config.py  db.py  main.py
api/src/api/catalogs/: hijri_occasions.yaml
api/src/api/data/: dua_library.json
api/src/api/models/: __init__.py  admin.py  auth.py  base.py  briefs.py  orgs.py  social.py  topics.py
api/src/api/routers/: health.py  users.py
api/src/api/scripts/: backfill_hadith_translations.py  backfill_relevance.py  cluster_topics.py  download_adab.py  download_alumm.py  download_aqidah_awam.py  download_bidayat.py  download_bn.py  download_fmuin.py  download_fqarib.py  download_fs.py  download_hadith.py  download_hs.py  download_nashaih.py  download_quran.py  download_sirah.py  download_syamail.py  download_tafsir.py  download_ts3.py  embed_adab.py  embed_alumm.py  embed_aqidah_awam.py  embed_bidayat.py  embed_bn.py  embed_fmuin.py  embed_fqarib.py  embed_fs.py  embed_hadith.py  embed_hs.py  embed_nashaih.py  embed_quran.py  embed_sirah.py  embed_syamail.py  embed_tafsir.py  embed_ts3.py  hotfix_kau_kamu.py  ingest.py  ingest_x.py  manual_briefing.py  manual_briefing_dump_all.sh  (+11 more)
api/src/api/services/: apify.py  auth.py  billing.py  briefing.py  email_digest.py  flyer_content.py  hadith_translation.py  ingest_queries.py  ingest_runs.py  insights_summary.py  islamic_calendar.py  kitab_retrieval.py  language.py  metrics.py  news_sentiment.py  normalizers.py  occasion_catalog.py  pipeline_flags.py  relevance.py  rss.py  safe_fetch.py  sentiment.py  tafsir_translation.py  theme_groups.py  topic_discovery.py  trending_headlines.py  trending_topics.py  usage.py  validate_briefing.py  youtube.py
api/tests/: test_health.py  test_kitab_retrieval_smoke.py  test_topic_discovery_rescue.py
(+341 files in other folders)
